--- a/web/themes/custom/frontend/templates/content/node--teaser.html.twig
+++ b/web/themes/custom/frontend/templates/content/node--teaser.html.twig
@@ -1,15 +1,13 @@
 {{ attach_library('frontend/node--teaser') }}
 
-{%
-  set classes = [
+{% set classes = [
   'node',
   'node--type-' ~ node.bundle|clean_class,
   node.isPromoted() ? 'node--promoted',
   node.isSticky() ? 'node--sticky',
   not node.isPublished() ? 'node--unpublished',
   view_mode ? 'node--view-mode-' ~ view_mode|clean_class,
-]
-%}
+] %}
 
 <article{{ attributes.addClass(classes) }}>
   <div class="row" {{ content_attributes.addClass('node__content') }}>
@@ -19,12 +17,12 @@
     <div class="col-md-8">
       <div class="date-tags">
         {{ content.field_news_type }}
-        {{ content.created }}
+        <div>{{ node.getCreatedTime|format_date('european_date') }}</div>
       </div>
       {{ title_prefix }}
       {% if label and not page %}
         <h3{{ title_attributes }}>
-          <a class="title-teaser max-2-lines" href="{{ url }}" rel="bookmark" >{{ label }}</a>
+          <a class="title-teaser max-2-lines" href="{{ url }}" rel="bookmark">{{ label }}</a>
         </h3>
       {% endif %}
       {{ title_suffix }}
