refs #18952 - create hero banner

--- a/web/modules/custom/edw/templates/banner-block.html.twig
+++ b/web/modules/custom/edw/templates/banner-block.html.twig
@@ -1,13 +1,12 @@
-{#{% if image %}#}
+{% if image %}
   <h1>{{ title }}</h1>
   <div class="breadcrumbs">{{ breadcrumb }}</div>
   <div class="summary">{{ summary }}</div>
   <div class="image">
     {{ image }}
   </div>
-{#{% else %}#}
+{% else %}
   <div class="container">
     <h1>{{ title }}</h1>
   </div>
-{#{% endif %}#}
-{{ dump(summary) }}
+{% endif %}
