--- a/web/themes/custom/frontend/templates/components/edw/banner-block.pcss.css
+++ b/web/themes/custom/frontend/templates/components/edw/banner-block.pcss.css
@@ -13,7 +13,7 @@
     z-index: -1;
     margin-left: 50%;
     transform: translateX(-50%);
-    border-top: 4px solid var(--c-edw-green);
+    border-top: 4px solid var(--c-primary);
   }
 
   & img {
@@ -26,7 +26,7 @@
 
   & h1 {
     color: #fff;
-    text-shadow: 0px 0px 10px rgba(0, 0, 0, 0.35);
+    text-shadow: 0px 0px 10px var(--c-black);
   }
 
   & picture {
