center footer link

--- a/web/themes/custom/frontend/css/general.css
+++ b/web/themes/custom/frontend/css/general.css
@@ -101,6 +101,11 @@ img {
     margin-top: 1.25rem;
 }
 
+.view-footer a{
+  display: flex;
+  justify-content: center;
+}
+
 .max-3-lines {
   overflow: hidden;
   text-overflow: ellipsis;
