--- a/web/themes/custom/frontend/dev/pcss/general.pcss.css
+++ b/web/themes/custom/frontend/dev/pcss/general.pcss.css
@@ -108,6 +108,10 @@ img {
     margin-top: 20px;
   }
 }
+.view-footer a{
+  display: flex;
+  justify-content: center;
+}
 
 .max-3-lines {
   overflow: hidden;
