--- a/web/themes/custom/frontend/css/components/content/node--teaser.css
+++ b/web/themes/custom/frontend/css/components/content/node--teaser.css
@@ -1,13 +1,27 @@
-.node--view-mode-teaser {
-  margin: 1.25rem 0;
+.node-teaser {
+  margin-bottom: 1.875rem;
 }
 
-  .node--view-mode-teaser .date-tags {
-    display: flex;
+  .node-teaser .field--name-field-image {
+    margin-bottom: 0.625rem;
   }
 
-  .node--view-mode-teaser .date-tags *:not(:first-child){
-      margin-left: 0.625rem;
-      padding-left: 0.625rem;
-      border-left: 1px solid black;
+  .node-teaser h3 a {
+      text-decoration: none;
+      color: var(--body-color);
     }
+
+  .node-teaser h3 a:hover {
+        color: var(--link-hover-color);
+      }
+
+  .node-teaser .date-tags {
+    display: flex;
+    margin-bottom: 0.625rem;
+  }
+
+  .node-teaser .date-tags *:not(:first-child):before {
+        content: '|';
+        margin-right: 0.3125rem;
+        margin-left: 0.3125rem;
+      }
