--- a/web/themes/custom/frontend/templates/content/node--compact-teaser.html.twig
+++ b/web/themes/custom/frontend/templates/content/node--compact-teaser.html.twig
@@ -68,16 +68,35 @@
  * @ingroup themeable
  */
 #}
-<article{{ attributes }}>
+{{ attach_library('frontend/node--teaser') }}
+
+{% set classes = [
+  'node',
+  'node--type-' ~ node.bundle|clean_class,
+  node.isPromoted() ? 'node--promoted',
+  node.isSticky() ? 'node--sticky',
+  not node.isPublished() ? 'node--unpublished',
+  view_mode ? 'node--view-mode-' ~ view_mode|clean_class,
+  'node-teaser',
+] %}
+
+<article{{ attributes.addClass(classes) }}>
   <div{{ content_attributes }}>
     {{ content.field_image }}
-    {{ content.field_news_type }}
+    <div class="date-tags">
+      {% if not node.field_news_type.isEmpty %}
+        <div class="field">
+          {{ content.field_news_type.0 }}
+        </div>
+      {% endif %}
+      <div>{{ node.getCreatedTime|format_date('european_date') }}</div>
+    </div>
   </div>
   {{ title_prefix }}
   {% if label and not page %}
-    <h2{{ title_attributes }}>
+    <h3{{ title_attributes }}>
       <a href="{{ url }}" rel="bookmark">{{ label }}</a>
-    </h2>
+    </h3>
   {% endif %}
   {{ title_suffix }}
 </article>
